docs/envoy/v1.20.4/_sources/api-v3/extensions/filters/http/cache/v3/cache.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/http/cache/v3/cache.proto:

HTTP Cache Filter
=================


This documentation is for the Envoy v3 API.

As of Envoy v1.18 the v2 API has been removed and is no longer supported.

If you are upgrading from v2 API config you may wish to view the v2 API documentation:

    :ref:`config/filter/http/cache/v2alpha/cache.proto <v1.17.2:envoy_api_file_envoy/config/filter/http/cache/v2alpha/cache.proto>`



.. _envoy_v3_api_msg_extensions.filters.http.cache.v3.CacheConfig:

extensions.filters.http.cache.v3.CacheConfig
--------------------------------------------

:repo:`[extensions.filters.http.cache.v3.CacheConfig proto] <api/envoy/extensions/filters/http/cache/v3/cache.proto#L21>`



.. _extension_envoy.filters.http.cache:

This extension may be referenced by the qualified name ``envoy.filters.http.cache``

.. note::
  This extension is work-in-progress. Functionality is incomplete and it is not intended for production use.

  This extension is intended to be robust against both untrusted downstream and upstream traffic.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.http <extension_category_envoy.filters.http>`

.. code-block:: json

  {
    "typed_config": "{...}",
    "allowed_vary_headers": []
  }

.. _envoy_v3_api_field_extensions.filters.http.cache.v3.CacheConfig.typed_config:

typed_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) Config specific to the cache storage implementation.
  
  
  .. _extension_category_envoy.filters.http.cache:
  
  .. tip::
  
    This extension category has the following known extensions:
  
  
    - :ref:`envoy.cache.simple_http_cache <extension_envoy.cache.simple_http_cache>`
  
  
  
  
  
.. _envoy_v3_api_field_extensions.filters.http.cache.v3.CacheConfig.allowed_vary_headers:

allowed_vary_headers
  (**repeated** :ref:`type.matcher.v3.StringMatcher <envoy_v3_api_msg_type.matcher.v3.StringMatcher>`) List of matching rules that defines allowed *Vary* headers.
  
  The *vary* response header holds a list of header names that affect the
  contents of a response, as described by
  https://httpwg.org/specs/rfc7234.html#caching.negotiated.responses.
  
  During insertion, *allowed_vary_headers* acts as a allowlist: if a
  response's *vary* header mentions any header names that aren't matched by any rules in
  *allowed_vary_headers*, that response will not be cached.
  
  During lookup, *allowed_vary_headers* controls what request headers will be
  sent to the cache storage implementation.
  
  



